Fix redux compose showing error on mobile because redux-dev-tools not installed

--- a/src/components/OrganizationSideBarLogo/OrganizationSideBarLogo.scss
+++ b/src/components/OrganizationSideBarLogo/OrganizationSideBarLogo.scss
@@ -1,6 +1,7 @@
 .Component_OrganizationSideBarLogo {
   .logo {
     max-height: 45px;
+    max-width: 100%;
     margin: 0 auto;
   }
   
